argocd-managed/drinkn/auth-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drinkn-auth
  name: drinkn-auth
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: drinkn-auth
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drinkn-auth
    spec:
      containers:
      - image: bierteam/auth
        imagePullPolicy: Always
        name: drinkn-auth
---
apiVersion: v1
kind: Service
metadata:
  name: drinkn-auth
spec:
  selector:
    app: drinkn-auth
  ports:
    - port: 80
      name: default
      protocol: TCP
      targetPort: 3000
