argocd-managed/drinkn/cocktail-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drinkn-cocktail-api
  name: drinkn-cocktail-api
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: drinkn-cocktail-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drinkn-cocktail-api
    spec:
      containers:
        - image: bierteam/cocktail-api
          imagePullPolicy: Always
          name: drinkn-cocktail-api
---
apiVersion: v1
kind: Service
metadata:
  name: drinkn-cocktail-api
spec:
  selector:
    app: drinkn-cocktail-api
  ports:
    - port: 80
      name: default
      protocol: TCP
      targetPort: 3000
