argocd-managed/drinkn/drinkn-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drinkn-frontend
  name: drinkn-frontend
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: drinkn-frontend
  strategy:

    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drinkn-frontend
    spec:
      containers:
      - image: bierteam/frontend
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        name: drinkn-frontend
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: drinkn-frontend
spec:
  selector:
    app: drinkn-frontend
  ports:
    - port: 80
      name: default
      protocol: TCP
      targetPort: 80
