argocd-managed/drinkn/pils-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drinkn-pils-api
  name: drinkn-pils-api
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: drinkn-pils-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drinkn-pils-api
    spec:
      containers:
      - image: bierteam/pils-api:v1
        imagePullPolicy: Always
        name: drinkn-pils-api
---
apiVersion: v1
kind: Service
metadata:
  name: drinkn-pils-api
spec:
  selector:
    app: drinkn-pils-api
  ports:
    - port: 80
      name: default
      protocol: TCP
      targetPort: 3000
