argocd-managed/drinkn/pils-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drinkn-frontend-v1
  name: drinkn-frontend-v1
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: drinkn-frontend-v1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drinkn-frontend-v1
    spec:
      containers:
        - image: bierteam/frontend:v1
          imagePullPolicy: Always
          name: drinkn-frontend-v1
---
apiVersion: v1
kind: Service
metadata:
  name: drinkn-frontend-v1
spec:
  selector:
    app: drinkn-frontend-v1
  ports:
    - port: 80
      name: default
      protocol: TCP
      targetPort: 80
