argocd-managed/drinkn/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: drinkn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drinkn.oscarr.nl`, `xn--xj8haa.tk`)
      kind: Rule
      services:
        - name: drinkn-frontend
          port: 80
    - match: Host(`drinkn.oscarr.nl`, `xn--xj8haa.tk`) && PathPrefix(`/api/v2/auth`)
      kind: Rule
      services:
        - name: drinkn-auth
          port: 80
    - match: Host(`drinkn.oscarr.nl`, `xn--xj8haa.tk`) && PathPrefix(`/api/v2/beer`)
      kind: Rule
      services:
        - name: drinkn-auth
          port: 80
    - match: Host(`drinkn.oscarr.nl`, `xn--xj8haa.tk`) && PathPrefix(`/api/v2/mix`)
      kind: Rule
      services:
        - name: drinkn-auth
          port: 80
    - match: Host(`drinkn.oscarr.nl`, `xn--xj8haa.tk`) && PathPrefix(`/api/v2/supermarket`)
      kind: Rule
      services:
        - name: drinkn-auth
          port: 80
    - match: Host(`pils.oscarr.nl`)
      kind: Rule
      services:
        - name: drinkn-frontend-v1
          port: 80
    - match: Host(`pils.oscarr.nl`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: drinkn-pils-api
          port: 80
